# testdeepwiki

./: README.md  pyproject.toml  requirements.txt
tg_console/: __init__.py  __main__.py  app.py  auth.py  config.py  image_converter.py  telegram_client.py
tg_console/ui/: __init__.py  chat_view.py  folder_panel.py  main_view.py  message_panel.py
