[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_console"
version = "0.1.0"
authors = [
    {name = "TG Console Developer", email = "example@example.com"},
]
description = "A console-based Telegram client with a Midnight Commander-like interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.dependencies]
telethon = "^1.26.1"
urwid = "^2.1.2"
pillow = "^9.3.0"